--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "@types/react-dom": "18.2.6",
     "antd": "^5.6.2",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.3.1",
     "next": "13.4.7",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,6 +33,8 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "sass": "^1.63.6"
   }
 }
