--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@tailwindcss/forms": "^0.5.3",
+    "@tinymce/tinymce-react": "^4.3.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -18,6 +19,7 @@
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "draftjs-to-html": "^0.9.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "jsonwebtoken": "^9.0.0",
@@ -27,17 +29,21 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
     "react-select": "^5.7.3",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "tailwindcss": "3.3.2",
+    "tinymce": "^6.5.1",
     "typescript": "5.1.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/draftjs-to-html": "^0.8.1",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "sass": "^1.63.6"
   }
 }
